--- a/SpeedTestLogger/appsettings.json
+++ b/SpeedTestLogger/appsettings.json
@@ -2,5 +2,5 @@
   "userId": "cloud-101-testuser",
   "loggerId": 1,
   "loggerLocationCountryCode": "nb-NO",
-  "speedTestApiUrl": "https://testuser-speedtest-api.azurewebsites.net"
+  "speedTestApiUrl": "https://gaus2-speedtest-api.azurewebsites.net"
 }
